--- a/line-frontend-framework/package.json
+++ b/line-frontend-framework/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "moment": "^2.24.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-geolocated": "^2.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "request-promise": "^4.2.4",
     "sweetalert2": "^7.26.9"
   },
   "scripts": {
